# epiphany-finance

./: .gitignore  INSTALL.md  README.md  SKILL-CODEX.md  SKILL.md  appendix.md  brief.md  build_graph.py  graph.json  graph.v1.json  graph.v2-base.json  install-codex.sh  install.sh  intent.json  pyproject.toml  wiring-contract.yaml
fixtures/: destitute.json  middle.json  recorded_state.json  seed_verify.json  ultra-HNW.json
modules/: N-ADVERSARIAL.md  N-BENEFIT-SAFETY.md  N-BUDGET-ENGINE.md  N-CHART-SPEC.md  N-CLASSIFY.md  N-CONTEXT-INGEST.md  N-DISCLAIMER.md  N-FRAME-HNW.md  N-FRAME-MERGE.md  N-FRAME-SELECT.md  N-FRAME-STANDARD.md  N-FRAME-SURVIVAL.md  N-HITL-APPROVE.md  N-INCOME-ENGINE.md  N-MACRO-FETCH.md  N-PORTFOLIO-ENGINE.md  N-PREFLIGHT.md  N-QUALITY-GATE.md  N-QUOTE-FETCHER.md  N-REFUSE.md  N-REPORT.md  N-RESEARCH-AGG.md  N-RESEARCH-ECO.md  N-RESEARCH-LOC.md  N-RESEARCH-MKT.md  N-SITUATION-ANALYZE.md  N-STRAT-CAND-BUDGET.md  N-STRAT-CAND-INCOME.md  N-STRAT-CAND-PORTFOLIO.md  N-STRATEGY-FANOUT.md  N-STRATEGY-MERGE.md  N-SYNTHESIS-AGG.md  N-VERIFY-BUDGET.md  N-VERIFY-INCOME.md
tests/: compiler_lowering_fixture.json  conftest.py  e2e_drive.py  test_audit_2026_06_14.py  test_build_graph.py  test_graph_liveness.py  test_integration_matrix.py  test_intent_lowering.py  test_persistence.py  test_v2_battery.py  test_v_battery.py
tools/: build_v2_graph.py
wrapper/: __init__.py  charts.py  checks.py  disclaimer.py  finance.py  intake.py  pdf.py  quote.py  run.py  state.py  workspace.py
